--- a/styles.css
+++ b/styles.css
@@ -267,7 +267,7 @@ footer p {
     }
 }
 
-/* Apply button styles to "Get in Touch" link */
+/* Apply button styles to "Get in touch" link */
 #get-in-touch {
     display: inline-block;
     padding: 10px 20px;
